--- a/bot/index.html
+++ b/bot/index.html
@@ -81,6 +81,13 @@
                 </div>
             </div>
         </div>
+        <div class="card bg-grey" style="width:100%">
+            <div class="card-body">
+                <h4 class="card-title big-text">Data Protection Policy</h4>
+                <a href="https://chuutopia.com/bot/data"
+                    class="btn btn-discord btn-block stretched-link big-small">Click here to view.</a>
+            </div>
+        </div>
         <div class="row">
             <h1 class="brand-line"><b>Global Commands!</b></h1>
         </div>
@@ -178,17 +185,12 @@
                 </li>
             </ul>
         </div>
-        <div class="card bg-grey" style="width:100%">
-            <div class="card-body">
-                <a href="https://chuutopia.com/bot/data" class="btn btn-discord btn-block stretched-link">Our Data
-                    Protection Policy!</a>
-            </div>
+        <div>
             <nav class="navbar navbar-expand-md bg-discord navbar-dark justify-content-center">
                 <div class="container">
                     <a class="navbar-brand" href="https://chuutopia.com"><b>&#169; 2022 | Chuu'topia</b></a>
                 </div>
             </nav>
-
 </body>
 
 </html>
