fixeded the padding
changed card bottom padding to 30px

--- a/bot/index.html
+++ b/bot/index.html
@@ -60,7 +60,6 @@
                         <p class="card-text">Invite the greatest Chuu pic bot to your server and increase its Chuu'iness
                             by
                             1000%!</p>
-                        <!-- This link invites Spectre, Change the client id to your bot's id -->
                         <a href="https://discord.com/api/oauth2/authorize?client_id=830953848130109460&permissions=412384324672&scope=bot"
                             class="btn btn-discord btn-block stretched-link">Invite Chuu'topia Bot!</a>
                     </div>
@@ -81,116 +80,119 @@
                 </div>
             </div>
         </div>
-        <div class="card bg-grey" style="width:100%">
-            <div class="card-body">
-                <h4 class="card-title big-text">Data Protection Policy</h4>
-                <a href="https://chuutopia.com/bot/data"
-                    class="btn btn-discord btn-block stretched-link big-small">Click here to view.</a>
-            </div>
-        </div>
         <div class="row">
-            <h1 class="brand-line"><b>Global Commands!</b></h1>
-        </div>
-        <div class="container container-1">
-            <div class="row">
-            </div>
-            <div class="row">
-            </div>
-            <ul class="list-group" id="CommandList">
-                <li class="list-group-item">
-                    <div class="row">
-                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
-                            <div class="card bg-grey" style="width:100%">
-                                <div class="card-body">
-                                    <!-- Command -->
-                                    <h4 class="card-title big-text">%chuupic</h4>
-                                    <!-- Command Description -->
-                                    <p class="card-text">Hand delivers the Chuu'iest pic ever!</p>
-                                </div>
-                            </div>
-                        </div>
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                <div class="card bg-grey" style="width:100%">
+                    <div class="card-body">
+                        <h4 class="card-title big-text">Privacy Policy</h4>
+                        <a href="https://chuutopia.com/bot/data"
+                            class="btn btn-discord btn-block stretched-link big-small">Click here to view.</a>
                     </div>
-                </li>
-                <li class="list-group-item">
-                    <div class="row">
-                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
-                            <div class="card bg-grey" style="width:100%">
-                                <div class="card-body">
-                                    <!-- Command -->
-                                    <h4 class="card-title big-text">%chuugif</h4>
-                                    <!-- Command Description -->
-                                    <p class="card-text">Just like %chuupic, except she moves!</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </li>
-                <li class="list-group-item">
-                    <div class="row">
-                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
-                            <div class="card bg-grey" style="width:100%">
-                                <div class="card-body">
-                                    <!-- Command -->
-                                    <h4 class="card-title big-text">%loonapic</h4>
-                                    <!-- Command Description -->
-                                    <p class="card-text">For all you OT12's out there, a random pic of any Loona
-                                        member!</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </li>
-                <li class="list-group-item">
-                    <div class="row">
-                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
-                            <div class="card bg-grey" style="width:100%">
-                                <div class="card-body">
-                                    <!-- Command -->
-                                    <h4 class="card-title big-text">%loonameme</h4>
-                                    <!-- Command Description -->
-                                    <p class="card-text">Who doesn't love a loona meme?</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </li>
-                <li class="list-group-item">
-                    <div class="row">
-                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
-                            <div class="card bg-grey" style="width:100%">
-                                <div class="card-body">
-                                    <!-- Command -->
-                                    <h4 class="card-title big-text">%ar list</h4>
-                                    <!-- Command Description -->
-                                    <p class="card-text">Gives you all the other easter egg ar's!</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </li>
-                <li class="list-group-item">
-                    <div class="row">
-                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
-                            <div class="card bg-grey" style="width:100%">
-                                <div class="card-body">
-                                    <!-- Command -->
-                                    <h4 class="card-title big-text">%help</h4>
-                                    <!-- Command Description -->
-                                    <p class="card-text"><b>*Bot Admin only*</b> There are more global features on the
-                                        way!</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </li>
-            </ul>
-        </div>
-        <div>
-            <nav class="navbar navbar-expand-md bg-discord navbar-dark justify-content-center">
-                <div class="container">
-                    <a class="navbar-brand" href="https://chuutopia.com"><b>&#169; 2022 | Chuu'topia</b></a>
                 </div>
-            </nav>
+                <div class="row">
+                    <h1 class="brand-line"><b>Global Commands!</b></h1>
+                </div>
+                <div class="container container-1">
+                    <div class="row">
+                    </div>
+                    <div class="row">
+                    </div>
+                    <ul class="list-group" id="CommandList">
+                        <li class="list-group-item">
+                            <div class="row">
+                                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                                    <div class="card bg-grey" style="width:100%">
+                                        <div class="card-body">
+                                            <!-- Command -->
+                                            <h4 class="card-title big-text">%chuupic</h4>
+                                            <!-- Command Description -->
+                                            <p class="card-text">Hand delivers the Chuu'iest pic ever!</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="list-group-item">
+                            <div class="row">
+                                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                                    <div class="card bg-grey" style="width:100%">
+                                        <div class="card-body">
+                                            <!-- Command -->
+                                            <h4 class="card-title big-text">%chuugif</h4>
+                                            <!-- Command Description -->
+                                            <p class="card-text">Just like %chuupic, except she moves!</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="list-group-item">
+                            <div class="row">
+                                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                                    <div class="card bg-grey" style="width:100%">
+                                        <div class="card-body">
+                                            <!-- Command -->
+                                            <h4 class="card-title big-text">%loonapic</h4>
+                                            <!-- Command Description -->
+                                            <p class="card-text">For all you OT12's out there, a random pic of any Loona
+                                                member!</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="list-group-item">
+                            <div class="row">
+                                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                                    <div class="card bg-grey" style="width:100%">
+                                        <div class="card-body">
+                                            <!-- Command -->
+                                            <h4 class="card-title big-text">%loonameme</h4>
+                                            <!-- Command Description -->
+                                            <p class="card-text">Who doesn't love a loona meme?</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="list-group-item">
+                            <div class="row">
+                                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                                    <div class="card bg-grey" style="width:100%">
+                                        <div class="card-body">
+                                            <!-- Command -->
+                                            <h4 class="card-title big-text">%ar list</h4>
+                                            <!-- Command Description -->
+                                            <p class="card-text">Gives you all the other easter egg ar's!</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="list-group-item">
+                            <div class="row">
+                                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                                    <div class="card bg-grey" style="width:100%">
+                                        <div class="card-body">
+                                            <!-- Command -->
+                                            <h4 class="card-title big-text">%help</h4>
+                                            <!-- Command Description -->
+                                            <p class="card-text"><b>*Bot Admin only*</b> There are more global features
+                                                on the
+                                                way!</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <div>
+                    <nav class="navbar navbar-expand-md bg-discord navbar-dark justify-content-center">
+                        <div class="container">
+                            <a class="navbar-brand" href="https://chuutopia.com"><b>&#169; 2022 | Chuu'topia</b></a>
+                        </div>
+                    </nav>
 </body>
 
 </html>
