--- a/bot/index.html
+++ b/bot/index.html
@@ -56,12 +56,12 @@
                 <div class="card bg-grey" style="width:100%">
                     <div class="card-body">
                         <img class="card-img-top" src="asset/image1.png" alt="Bot Invite" style="width:100%">
-                        <h4 class="card-title big-text">Invite @chuu'topia</h4>
+                        <h4 class="card-title big-text">Invite Chuutopia Bot!</h4>
                         <p class="card-text">Invite the greatest Chuu pic bot to your server and increase its Chuu'iness
                             by
                             1000%!</p>
                         <a href="https://discord.com/api/oauth2/authorize?client_id=830953848130109460&permissions=412384324672&scope=bot"
-                            class="btn btn-discord btn-block stretched-link">Invite Chuu'topia Bot!</a>
+                            class="btn btn-discord btn-block stretched-link">Invite the bot!</a>
                     </div>
                 </div>
             </div>
@@ -69,9 +69,9 @@
                 <div class="card bg-grey" style="width:100%">
                     <div class="card-body">
                         <img class="card-img-top" src="asset/image2.png" alt="Support Server" style="width:100%">
-                        <h4 class="card-title big-text">Support Server!</h4>
-                        <p class="card-text">Join here for help setting up the bot request features and to
-                            report bugs..
+                        <h4 class="card-title big-text">Join Support Server!</h4>
+                        <p class="card-text">Join here for help setting up the bot, request features and to
+                            report bugs.
                         </p>
                         <a href="https://discord.gg/NzZ97QgSvX" target="_blank"
                             class="btn btn-discord btn-block stretched-link">Join
