--- a/bot/data/index.html
+++ b/bot/data/index.html
@@ -55,9 +55,10 @@
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
                 <div class="card bg-grey" style="width:100%">
                     <div class="card-body">
-                        <h4 class="card-title big-text">Data protection Policy</h4>
+                        <h4 class="card-title big-text">Privacy Policy</h4>
                         <h5 class="card-title small-text"><i>Coming Soon!</i></h5>
-                        <p class="card-text">If you have any questions about your data in the meantime, please see us in
+                        <p class="card-text">If you have any questions about your privacy in the meantime, please see us
+                            in
                             our support server!</p>
                     </div>
                 </div>
