--- a/bot/data/index.html
+++ b/bot/data/index.html
@@ -56,10 +56,43 @@
                 <div class="card bg-grey" style="width:100%">
                     <div class="card-body">
                         <h4 class="card-title big-text">Privacy Policy</h4>
-                        <h5 class="card-title small-text"><i>Coming Soon!</i></h5>
-                        <p class="card-text">If you have any questions about your privacy in the meantime, please see us
-                            in
-                            our support server!</p>
+                        <p class="card-text">To avoid confusion of what data is and isn't personal or end user data
+                            within GDPR description or within the Discord ToS for developers, here is a breakdown of
+                            all data we have on you, including both data that classifies as personal or end user data.
+                        </p>
+                        <p>The information we have access to contains your basic account information the same data that
+                            any user of Discord can see, in addition we can see your list of servers and what
+                            permissions you have in those servers. We lose the access to your server list and
+                            permissions in those servers where Chuu’topia Bot is not present in the same servers as you.
+                        </p>
+                        <p>We also lose the access to your nickname; server join timestamp and roles when either you
+                            leave a server or Chuu’topia Bot gets removed from a server. We lose the access to basic
+                            information (username, discrim, avatar hash) when both apply.</p>
+                        <p>Information we store in our database (encrypted to conform with GDPR and other privacy laws)
+                            is limited to user ID, username, discrim and avatar as of the time you last used a
+                            Chuu’topia Bot command.</p>
+                        <p>Information we store in RAM cache is limited to your servers list and the information
+                            Discord sends to the client of any user that shares a server with you (id, username,
+                            discrim, avatar hash) For all servers you share with the bot this also includes server join
+                            timestamp, nickname, and roles.</p>
+                        <p>This info is fetched when we need it or is send together with events we receive from
+                            discord, this is kept in memory until that part of the bot restarts, or it’s dropped from
+                            the cache, whichever comes first.</p>
+                        <p>Processing data messages you send in discord and other events you create are NOT STORED, we
+                            receive the events and process them where needed to provide the services you requested, this
+                            data is not stored for any longer than is absolutely necessary.</p>
+                        <h5 class="card-title small-text"><i>If you have read this far you may also be interested
+                                in:</i></h5>
+                        <ul>
+                            <li><a href="https://www.dis.gd/tos" target="_blank">Discord ToS for all users</a>
+                            </li>
+                            <li><a href="https://discordapp.com/privacy" target="_blank">Discord Privacy Policy</a>
+                            </li>
+                            <li><a href="https://discordapp.com/developers/docs/legal" target="_blank">Discord ToS
+                                    for Developers</a></li>
+                        </ul>
+                        Chuu'topia Bot is fully compliant with all of Discord's ToS and Privacy Policies.
+                        </p>
                     </div>
                 </div>
             </div>
