--- a/bot/index.html
+++ b/bot/index.html
@@ -61,7 +61,7 @@
                             by
                             1000%!</p>
                         <a href="https://discord.com/api/oauth2/authorize?client_id=830953848130109460&permissions=412384324672&scope=bot"
-                            class="btn btn-discord btn-block stretched-link">Invite the bot!</a>
+                            target="_blank" class="btn btn-discord btn-block stretched-link">Invite the bot!</a>
                     </div>
                 </div>
             </div>
