added seo to mainpage
lol

--- a/bot/index.html
+++ b/bot/index.html
@@ -34,7 +34,7 @@
     <title>Chuu'topia's Chuupic Bot!</title>
     <meta name="description"
         content="A Discord bot that delivers a random picture of Loona's Chuu to your server, created by Maxr1998 in Chuu'topia!">
-    <meta name="keywords" content="Discord, Bot, Chuu, Loona, Chuu'topia, Chuutopia, cute, custom, ar">
+    <meta name="keywords" content="Discord, Bot, Chuu, Loona, Chuu'topia, Chuutopia, cute, custom, ar,">
     <!--Add additional SEO meta data here!-->
 
     <!-- Open Graph tags -->
