--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
         rel="stylesheet" type="text/css" />
     <!-- Core theme CSS (includes Bootstrap) -->
     <link href="css/styles.css" rel="stylesheet" />
+    <title>Chuu'topia</title>
+    <meta name="description" content="The Chuu'iest server on Discord, come join us today!">
+    <meta name="keywords"
+        content="Discord, Chuu, Loona, Chuu'topia, Chuutopia, cute, chuuie, friendly, aesthetic, chill, vibe, kim, jiwoo, orbit">
 </head>
 
 <body id="#Chuu'topia">
