--- a/index.html
+++ b/index.html
@@ -31,8 +31,11 @@
     <nav id="sidebar-wrapper">
         <ul class="sidebar-nav">
             <li class="sidebar-nav-item"><a href="#Chuu'topia">Chuu'topia</a></li>
+            <li class="sidebar-nav-item"><a href="#Community Preview">Community Preview</a></li>
+            <li class="sidebar-nav-item"><a href="#Supporters">Supporters</a></li>
             <li class="sidebar-nav-item"><a href="#Chuu's-Places">Chuu's-Places</a></li>
             <li class="sidebar-nav-item"><a href="#Support-Us">Support-Us</a></li>
+            <li class="sidebar-nav-item"><a href="#Ban-Appeal">Ban Appeal</a></li>
             <li class="sidebar-nav-item"><a href="https://chuutopia.com/bot" target="_blank">Chuu'topia Bot</a></li>
         </ul>
     </nav>
@@ -50,7 +53,6 @@
                         giveaways, bots and events galore. Join your new family today!
                     </p>
                     <a class="btn btn-dark btn-xl" href="https://discord.gg/uYe6JuTGPM">Join discord.gg/chuutopia</a>
-                    <img class="img-fluid" src="assets/img/supporters.png" alt="Patreon Supporters" />
                     <div>
                         <footer class="footer text-center">
                             <div class="container px-4 px-lg-5">
@@ -74,13 +76,54 @@
                 </div>
             </div>
     </section>
-
+    <!-- Community Preview -->
+    <section class="content-section bg-primary text-white text-center" id="Community Preview">
+        <div class="container px-4 px-lg-5">
+            <div class="content-section-heading">
+                <h3 class="text-secondary mb-0">More from Chuu'topia</h3>
+                <h2 class="mb-5">Just a smol preview of what you can expect</h2>
+            </div>
+            <div class="row gx-4 gx-lg-5">
+                <div class="col-lg-4 col-md-6 mb-5 mb-lg-0">
+                    <iframe style="border-radius:12x"
+                        src="https://open.spotify.com/embed/playlist/3P1ATiY43KbkiGJgXrqU4o?utm_source=generator"
+                        width="100%" height="380" frameBorder="0" allowfullscreen=""
+                        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                    <h4><strong>:choerryvibe:</strong></h4>
+                    <p class="text-faded mb-0">Vibe along with a selection of our communities favourite songs!</p>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-5 mb-lg-0">
+                    <a class="twitter-timeline" data-height="380"
+                        href="https://twitter.com/chuu_topia?ref_src=twsrc%5Etfw">Chuu'topia Twitter</a>
+                    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                    <h4><strong>:chuuaaa:</strong></h4>
+                    <p class="text-faded mb-0">Like, retweet and help spread the word of Chuu!</p>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-5 mb-lg-0">
+                    <iframe src="https://albumizr.com/a/OfF-" scrolling="no" frameborder="0" allowfullscreen width=""
+                        height="380"></iframe>
+                    <h4><strong>:starboard:</strong></h4>
+                    <p class="text-faded mb-0">Our completely out of context starboard!</p>
+                </div>
+            </div>
+    </section>
+    <!-- Supporters -->
+    <section class="content-section bg-light" id="Supporters">
+        <div class="container px-4 px-lg-5 text-center">
+            <div class="row gx-4 gx-lg-5 justify-content-center">
+                <div class="col-lg-10">
+                    <img class="img-fluid" src="assets/img/supporters.png" alt="Patreon Supporters" />
+                    <div>
+                    </div>
+                </div>
+            </div>
+    </section>
     <!-- Services -->
     <section class="content-section bg-primary text-white text-center" id="Chuu's-Places">
         <div class="container px-4 px-lg-5">
             <div class="content-section-heading">
-                <h3 class="text-secondary mb-0">Find out more!</h3>
-                <h2 class="mb-5">Our favourite places!</h2>
+                <h3 class="text-secondary mb-0">Find out more about Loona!</h3>
+                <h2 class="mb-5">Chuu's places :achuwu:!</h2>
             </div>
         </div>
         <div class="row gx-4 gx-lg-5">
@@ -119,7 +162,7 @@
     <section class="content-section" id="Support-Us">
         <div class="container px-4 px-lg-5">
             <div class="content-section-heading text-center">
-                <h3 class="text-secondary mb-0">Support Us</h3>
+                <h3 class="text-secondary mb-0">More of our places!</h3>
                 <h2 class="mb-5">Shops, Patreon &amp; Chuu'topia Bot!</h2>
             </div>
             <div class="row gx-0">
@@ -151,7 +194,8 @@
                             <div class="caption-content">
                                 <div class="h2">Patreon</div>
                                 <p class="mb-0">
-                                    Support your community and help it grow, all the while receiving epic rewards!
+                                    Support your community and help it grow, all the while receiving epic
+                                    rewards!
                                 </p>
                             </div>
                         </div>
@@ -164,7 +208,8 @@
                             <div class="caption-content">
                                 <div class="h2">NOW LAUNCHED!!</div>
                                 <p class="mb-0">
-                                    From <code>%chuugif</code> to <code>%chuupic</code> and every <code>%ar</code>
+                                    From <code>%chuugif</code> to <code>%chuupic</code> and every
+                                    <code>%ar</code>
                                     in between, invite Chuu'topia bot today!!
                                 </p>
                             </div>
@@ -176,31 +221,36 @@
         </div>
     </section>
     <!-- Call to Action -->
-    <section class="content-section bg-primary text-white">
+    <section class="content-section bg-primary text-white" id="Ban-Appeal">
         <div class="container px-4 px-lg-5 text-center">
             <h2 class="mb-4">Loved what you have seen, then dont delay and join today!</h2>
             <a class="btn btn-xl btn-light me-4" href="https://discord.gg/uYe6JuTGPM">Join us now!</a>
             <a class="btn btn-xl btn-dark" href="#Chuu'topia">To the top!</a>
         </div>
-        <!-- Footer -->
-        <footer class="footer text-center">
-            <div class="container px-4 px-lg-5">
-                <ul class="list-inline mb-5">
-                    <li class="list-inline-item">
-                        <a class="social-link rounded-circle text-white mr-3" href="https://twitter.com/chuu_topia"><i
-                                class="icon-social-twitter"></i></a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a class="social-link rounded-circle text-white" href="https://www.instagram.com/chuutopian"><i
-                                class="icon-social-instagram"></i></a>
-                    </li>
-                </ul>
-                <p class="text small mb-0">Website design: &copy; www.chuutopia.com 2021</p>
-                <p class="text small mb-0">Images: &copy; The Respective Artists, LOONA and Chuu 2021</p>
-            </div>
-        </footer>
-    </section>
+        <div class="content-section bg-primary text-white container px-4 px-lg-5 text-center">
+            <h4 class="mb-2">If you wish to appeal a ban, then please contact us on the email below.</h4>
+            <img class="img-fluid" src="assets/img/appealschuutopiaemail.png" alt="" />
+            <div>
+                <!-- Footer -->
+                <footer class="footer text-center">
+                    <div class="container px-4 px-lg-5">
+                        <ul class="list-inline mb-5">
+                            <li class="list-inline-item">
+                                <a class="social-link rounded-circle text-white mr-3"
+                                    href="https://twitter.com/chuu_topia"><i class="icon-social-twitter"></i></a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a class="social-link rounded-circle text-white"
+                                    href="https://www.instagram.com/chuutopian"><i
+                                        class="icon-social-instagram"></i></a>
 
+                            </li>
+                        </ul>
+                        <p class="text small mb-0">Website design: &copy; www.chuutopia.com 2021</p>
+                        <p class="text small mb-0">Images: &copy; The Respective Artists, LOONA and Chuu 2021</p>
+                    </div>
+                </footer>
+    </section>
     <!-- Scroll to Top Button -->
     <a class="scroll-to-top rounded" href="#Chuu'topia"><i class="fas fa-angle-up"></i></a>
     <!-- Bootstrap core JS -->
