--- a/index.html
+++ b/index.html
@@ -125,38 +125,39 @@
                 <h3 class="text-secondary mb-0">Find out more about Loona!</h3>
                 <h2 class="mb-5">Chuu's places :achuwu:!</h2>
             </div>
-        </div>
-        <div class="row gx-4 gx-lg-5">
-            <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-                <a href="https://www.youtube.com/channel/UChK2DhvPSG3sY0jIYYngVBA">
-                    <img class="img-fluid mb-2" src="assets/img/chuucandoit.gif" alt="chuucandoit YouTube channel" />
-                </a>
-                <h4><strong>Chuu Can Do It!</strong></h4>
-                <p class="text-faded mb-0">Help Chuu save the environment!</p>
+            <div class="row gx-4 gx-lg-5">
+                <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
+                    <a href="https://www.youtube.com/channel/UChK2DhvPSG3sY0jIYYngVBA">
+                        <img class="img-fluid mb-2" src="assets/img/chuucandoit.gif"
+                            alt="chuucandoit YouTube channel" />
+                    </a>
+                    <h4><strong>Chuu Can Do It!</strong></h4>
+                    <p class="text-faded mb-0">Help Chuu save the environment!</p>
+                </div>
+                <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
+                    <a href="https://www.youtube.com/channel/UCA3IECrL0SXVfyv667lIj5Q/videos">
+                        <img class="img-fluid mb-2" src="assets/img/hauteurtheday.gif"
+                            alt="Hauteur the day YouTube channel" />
+                    </a>
+                    <h4><strong>Hauteur the Day!</strong></h4>
+                    <p class="text-faded mb-0">Chuu pounces on shoppers in Seoul!</p>
+                </div>
+                <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
+                    <a href="https://www.youtube.com/channel/UCOJplhB0wGQWv9OuRmMT-4g">
+                        <img class="img-fluid mb-2" src="assets/img/loonayt.gif" alt="Official LOONA YouTube channel" />
+                    </a>
+                    <h4><strong>LOONA Youtube!</strong></h4>
+                    <p class="text-faded mb-0">LOONA MV's &amp; LOONA TV!</p>
+                </div>
+                <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
+                    <a href="https://twitter.com/loonatheworld?lang=en">
+                        <img class="img-fluid mb-2" src="assets/img/loonatwit.gif"
+                            alt="Official LOONA Twitter account" />
+                    </a>
+                    <h4><strong>@loonatheworld!</strong></h4>
+                    <p class="text-faded mb-0">LOONA Twitter!</p>
+                </div>
             </div>
-            <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-                <a href="https://www.youtube.com/channel/UCA3IECrL0SXVfyv667lIj5Q/videos">
-                    <img class="img-fluid mb-2" src="assets/img/hauteurtheday.gif"
-                        alt="Hauteur the day YouTube channel" />
-                </a>
-                <h4><strong>Hauteur the Day!</strong></h4>
-                <p class="text-faded mb-0">Chuu pounces on shoppers in Seoul!</p>
-            </div>
-            <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-                <a href="https://www.youtube.com/channel/UCOJplhB0wGQWv9OuRmMT-4g">
-                    <img class="img-fluid mb-2" src="assets/img/loonayt.gif" alt="Official LOONA YouTube channel" />
-                </a>
-                <h4><strong>LOONA Youtube!</strong></h4>
-                <p class="text-faded mb-0">LOONA MV's &amp; LOONA TV!</p>
-            </div>
-            <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-                <a href="https://twitter.com/loonatheworld?lang=en">
-                    <img class="img-fluid mb-2" src="assets/img/loonatwit.gif" alt="Official LOONA Twitter account" />
-                </a>
-                <h4><strong>@loonatheworld!</strong></h4>
-                <p class="text-faded mb-0">LOONA Twitter!</p>
-            </div>
-        </div>
     </section>
     <!-- Portfolio -->
     <section class="content-section" id="Support-Us">
@@ -227,29 +228,29 @@
             <a class="btn btn-xl btn-light me-4" href="https://discord.gg/uYe6JuTGPM">Join us now!</a>
             <a class="btn btn-xl btn-dark" href="#Chuu'topia">To the top!</a>
         </div>
-        <div class="content-section bg-primary text-white container px-4 px-lg-5 text-center">
-            <h4 class="mb-2">If you wish to appeal a ban, then please contact us on the email below.</h4>
-            <img class="img-fluid" src="assets/img/appealschuutopiaemail.png" alt="" />
-            <div>
-                <!-- Footer -->
-                <footer class="footer text-center">
-                    <div class="container px-4 px-lg-5">
-                        <ul class="list-inline mb-5">
-                            <li class="list-inline-item">
-                                <a class="social-link rounded-circle text-white mr-3"
-                                    href="https://twitter.com/chuu_topia"><i class="icon-social-twitter"></i></a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a class="social-link rounded-circle text-white"
-                                    href="https://www.instagram.com/chuutopian"><i
-                                        class="icon-social-instagram"></i></a>
-
-                            </li>
-                        </ul>
-                        <p class="text small mb-0">Website design: &copy; www.chuutopia.com 2021</p>
-                        <p class="text small mb-0">Images: &copy; The Respective Artists, LOONA and Chuu 2021</p>
-                    </div>
-                </footer>
+        <div class="content-section bg-primary text-white">
+            <div class="container px-4 px-lg-5 text-center">
+                <h4 class="mb-4">If you wish to appeal a ban, then please contact us on the email below.</h4>
+                <img class="img-fluid" src="assets/img/appealschuutopiaemail.png" alt="" />
+                <div>
+                    <!-- Footer -->
+                    <footer class="footer text-center">
+                        <div class="container px-4 px-lg-5">
+                            <ul class="list-inline mb-4">
+                                <li class="list-inline-item">
+                                    <a class="social-link rounded-circle text-white mr-3"
+                                        href="https://twitter.com/chuu_topia"><i class="icon-social-twitter"></i></a>
+                                </li>
+                                <li class="list-inline-item">
+                                    <a class="social-link rounded-circle text-white"
+                                        href="https://www.instagram.com/chuutopian"><i
+                                            class="icon-social-instagram"></i></a>
+                                </li>
+                            </ul>
+                            <p class="text small mb-0">Website design: &copy; www.chuutopia.com 2021</p>
+                            <p class="text small mb-0">Images: &copy; The Respective Artists, LOONA and Chuu 2021</p>
+                        </div>
+                    </footer>
     </section>
     <!-- Scroll to Top Button -->
     <a class="scroll-to-top rounded" href="#Chuu'topia"><i class="fas fa-angle-up"></i></a>
